--- a/_posts/2018-03-10-AWS.md
+++ b/_posts/2018-03-10-AWS.md
@@ -1,8 +1,8 @@
 ---
 
-layout:default
-title: "AWS"
-tags: NodeJS
+layout : default
+title : "NodeJS-AWS"
+tags : NodeJS
 
 ---
 
@@ -77,7 +77,7 @@ Elastic Computer Cloud의 줄임말 입니다.
 > 이 프로그램은 아까 생성한 **.pem**형식의 키를 **.ppk**로 변환하여 줍니다.
 >
 > #### 사용법
-> 
+>
 >실행하면 화면 하단의 **Load**를 선택합니다.
 >
 >그리고 아까 생성한 .pem 형식의 키를 찾습니다.
@@ -167,4 +167,3 @@ Elastic Computer Cloud의 줄임말 입니다.
 >만약 소스에 특정 IP를 설정하면, 그 IP를 가진 클라이언트, 혹은 그 IP를 경유해야만이 접속이 가능합니다. 이를 이용하여 조금 더 보안 수준을 높일수 있습니다.
 
 이제 퍼블릭 DNS를 통해 누구나 해당 인스턴스에 접속할 수 있게 되었습니다.
-
