--- a/_posts/2018-03-26-Error.md
+++ b/_posts/2018-03-26-Error.md
@@ -1,6 +1,6 @@
 ---
 layout : default
-title : "오류 방지"
+title : "Error"
 tags : Algorithm
 ---
 
@@ -14,7 +14,7 @@ tags : Algorithm
 
 1. [Learning rate 조절](#learningrate)
 2. [Data Preproccessing](#datapreproccessing)
-3. [Overfitting](#ovefitting)
+3. [Overfitting](#overfitting)
 
 
 <div id="learningrate">
