--- a/_posts/2018-04-28-RNN.md
+++ b/_posts/2018-04-28-RNN.md
@@ -107,6 +107,8 @@ Shape는 Input, Output으로 2개 존재하게됩니다.
 ```{python}
 import tensorflow as tf
 import numpy as np
+from tensorflow.contrib import rnn
+import pprint
 
 hideen_size = 2 #Output Shape Dimention 결정
 
@@ -150,6 +152,8 @@ array([[[a, b]]])
 ```{python}
 import tensorflow as tf
 import numpy as np
+from tensorflow.contrib import rnn
+import pprint
 
 hideen_size = 2 #Output_shape = (?,?,2)
 cell = tf.contrib.rnn.BasicLSTMCell(num_units = hidden_size)
@@ -207,6 +211,8 @@ Hidden Size가 2이기 때문입니다.
 ```{python}
 import tensorflow as tf
 import numpy as np
+from tensorflow.contrib import rnn
+import pprint
 
 hideen_size = 2 #Output Shape = (?, ?, 2)
 
