--- a/_posts/2018-04-28-RNN.md
+++ b/_posts/2018-04-28-RNN.md
@@ -119,7 +119,7 @@ x_data = np.array([[[1,0,0,0]]], dtype = np.float32)#Input Shape 결정
 outputs, _states = tf.nn.dynamic_rnn(cell, x_data, dtype = tf.float32)
 
 ses.run(tf.global_variables_initializer())
-pp.print(outputs.eval())
+pp.pprint(outputs.eval())
 ```
 
 출력을 하게되면
@@ -169,7 +169,7 @@ x_data = np.array([[h, e, l, l, o]], dtype = np.float32) #Input_shape = (1,5,4)
 outputs, _states = tf.nn.dynamic_rnn(cell, x_data, dtype = tf.float32)
 
 ses.run(tf.global_variables_initializer())
-pp.print(outputs.eval())
+pp.pprint(outputs.eval())
 ```
 
 출력은
@@ -232,7 +232,7 @@ cell = tf.contrib.rnn.BasicLSTMCell(num_units = hidden_size)
 outputs, _states = tf.nn.dynamic_rnn(cell, x_data, dtype = tf.float32)
 
 ses.run(tf.global_variables_initializer())
-pp.print(outputs.eval())
+pp.pprint(outputs.eval())
 ```
 
 출력은
