--- a/_posts/2018-04-28-RNN.md
+++ b/_posts/2018-04-28-RNN.md
@@ -31,7 +31,7 @@ tags : Algorithm
 
 RNN이란 기존의 NN과 다르게 Cell의 Output이 Next Cell로 연결되는 특징을 가집니다.
 
-![Not so Big!](../assets/img/Algorithm/Tensorflow/RNN.png)
+![Not so Big!](..\assets\img\Algorithm\tensorflow\RNN.png)
 
 
 이러한 Tensorflow에서 쉽게 구현이 가능합니다.
@@ -42,6 +42,7 @@ RNN이란 기존의 NN과 다르게 Cell의 Output이 Next Cell로 연결되는 
 <h2>Cell과 Output<div style="float:right"><a href="#index">목차</a></div></h2>
 </div>
 
+---
 
 먼저 Cell을 결정하는 함수를 보겠습니다.
 
@@ -79,6 +80,8 @@ cell을 생성하는 부분과 학습을 하는 부분을 나누어 줌으로써
 <div id="shape">
 <h2>Shape<div style="float:right"><a href="#index">목차</a></div></h2>
 </div>
+
+---
 
 Shape는 Input, Output으로 2개 존재하게됩니다.
 
@@ -145,6 +148,8 @@ array([[[a, b]]])
 <h2>두번째 인자<div style="float:right"><a href="#index">목차</a></div></h2>
 </div>
 
+---
+
 두번째 인자를 설명하겠습니다.
 
 마찬가지로 코드를 보며 진행하겠습니다.
@@ -203,6 +208,8 @@ Hidden Size가 2이기 때문입니다.
 <div id="_1">
 <h2>첫번째 인자<div style="float:right"><a href="#index">목차</a></div></h2>
 </div>
+
+---
 
 마지막으로 첫번째 인자를 설명하겠습니다.
 
