--- a/_posts/2018-04-29-RNN_Train.md
+++ b/_posts/2018-04-29-RNN_Train.md
@@ -14,13 +14,8 @@ tags : Algorithm
 
 ---
 
-1. [RNN이란?](#rnn)
-2. [Cell과 Output](#celloutput)
-3. [Shape](#shape)
-4. [세번째 인자](#_3)
-4. [두번째 인자](#_2)
-4. [첫번째 인자](#_1)
-5. [결론](#outro)
+1. [RNN Training이란?](#rnn)
+2. [구현](#train)
 
 
 <div id="rnn">
@@ -39,24 +34,24 @@ tags : Algorithm
 
 <br>
 
-`hihello`라는 문자열에서
+```hihello``` 라는 문자열에서
 
-어떤 `h` 뒤에는 `i`가, 다른 `h`뒤에는 `e`가 나오는 등의 학습이 필요합니다.
+어떤 ```h``` 뒤에는 ```i``` 가, 다른 ```h``` 뒤에는 ```e``` 가 나오는 등의 학습이 필요합니다.
 
-이런 학습은 `h`앞에 어떤 문자가 있었는지를 알아야 이루어질 수 있습니다.
+이런 학습은 ```h``` 앞에 어떤 문자가 있었는지를 알아야 이루어질 수 있습니다.
 
-<div id="celloutput">
-<h2>Cell과 Output<div style="float:right"><a href="#index">목차</a></div></h2>
+<div id="train">
+<h2>구현<div style="float:right"><a href="#index">목차</a></div></h2>
 </div>
 
 ---
 
 
-먼저 `hihello`라는 **문자열(Text)**을 구분해보겠습니다.
+먼저 ```hihello``` 라는 **문자열(Text)**을 구분해보겠습니다.
 
-이 문자열은 `h` `i` `e` `l` `o` 총 5개의 **문자(Vocabulary)**로 이루어집니다.
+이 문자열은 ```h``` ```i``` ```e``` ```l``` ```o``` 총 5개의 **문자(Vocabulary)**로 이루어집니다.
 
-이 문자는 `h:0` `i:1` `e:2` `l:3` `0:4`처럼 각각의 **Index**를 지정하여 **Dictionary**형으로 구현하겠습니다.
+이 문자는 ```h:0``` ```i:1``` ```e:2``` ```l:3``` ```0:4```처럼 각각의 **Index**를 지정하여 **Dictionary**형으로 구현하겠습니다.
 
 그 후 각각을 **One Hot Encoding** 방식으로 구현하겠습니다.
 
@@ -127,10 +122,6 @@ for i in range(2000):
     print("\tPredcition str : ", ''.join(result_str))
 
 ```
-
-
-
-
 
 처음에는 다소 난잡하게 진행됩니다.
 
