--- a/_posts/2018-06-22-Suricata.md
+++ b/_posts/2018-06-22-Suricata.md
@@ -15,8 +15,9 @@ tags : LinuxUnix
 ---
 
 1. [Suricata란?](#suricata)
-2. [구성도](#struct)
-3. [설치](#install)
+2. [Snort VS Suricata](#snortvssuricata)
+3. [구성도](#struct)
+4. [설치](#install)
 
 <div id="suricata">
 <h2>Suricata란?<div style="float:right"><a href="#index">목차</a></div></h2>
@@ -25,6 +26,31 @@ tags : LinuxUnix
 ---
 
 IDS(탐지)/IPS(탐지,차단)가 가능한 Open source Tool입니다.
+
+<div id="snortvssuricata">
+<h2>Snort VS Suricata<div style="float:right"><a href="#index">목차</a></div></h2>
+</div>
+
+---
+
+iDS/IPS의 대표격인 툴로써 Snort가 존재합니다.
+
+하지만 Snort는 Multi-Thread를 지원하지 못합니다.
+
+이러한 단점을 포함하여 Snort를 보완한 툴이 Suricata입니다.
+
+Suricata는 기본적으로 Snort와 완벽히 호환됩니다.
+
+Snort와 Suricata는 모두 장단점이 존재합니다.
+
+기능면(Hardware Acceleration, Multi-Thread 등)에서는 Suricata가 더 뛰어납니다.
+
+하지만 속도나 관련정보(아직까지)는 Snort가 뛰어납니다.
+
+자세한 내용은 아래의 링크를 참조하시면 되겠습니다.
+
+[Snort VS Suricata](#http://wiki.aanval.com/wiki/Snort_vs_Suricata)
+
 
 <div id="struct">
 <h2>구현<div style="float:right"><a href="#index">목차</a></div></h2>
@@ -74,8 +100,8 @@ sudo apt-get install suricata
 1. 실행을 합니다.
 
 ```
-suriccata -c /etc/suricata/suricata.yaml -i [ETERNET_ID]
+suricata -c /etc/suricata/suricata.yaml -i [ETERNET_ID]
 
-ex) suriccata -c /etc/suricata/suricata.yaml -i eth0
+ex) suricata -c /etc/suricata/suricata.yaml -i eth0
 
 ```
